--- a/_config.yml
+++ b/_config.yml
@@ -39,8 +39,8 @@ additional_links:
 
 # About Section
 # about_title: About Me
-about_profile_image: images/profile.jpg
-# about_profile_image: images/me_white.jpg
+about_profile_image: images/default.jpg
+# about_profile_image: images/white-khanh.jpg
 about_content: | # this will include new lines to allow paragraphs
   Dear Sir/Madam,
 
