--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 # repository: sproogen/resume-theme
-favicon: images/favicon.ico
+favicon: images/white-khanh.ico
 
 # Content configuration version
 version: 2
