--- a/_config-senior.yml
+++ b/_config-senior.yml
@@ -4,7 +4,8 @@
 
 # Site
 # repository: sproogen/resume-theme
-favicon: images/favicon.ico
+favicon: images/white-khanh.ico
+# favicon: images/default.jpg
 
 # Content configuration version
 version: 2
