--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,6 @@
 #############################################################
 
 # Site
-# repository: sproogen/resume-theme
 favicon: images/favicon.ico
 
 # Content configuration version
@@ -11,44 +10,17 @@ version: 2
 
 # Personal info
 name: Khanh Q. Chung
-title: Senior Embedded Software & DevOps Engineer
-email: reedus.chung@gmail.com
+title: Embedded Engineer | DevOps Engineer
+email: khanhcq@uit.edu.vn
 phone: (+84) 907060401
-Address: Ho Chi Minh, Vietnam
-# website: https://reenor.github.io
+address: Ho Chi Minh city, Vietnam
 
 # Dark Mode (true/false/never)
 darkmode: false
 
 # Social links
-# twitter_username: facespics
-github_username:  reenor
-# stackoverflow_username: "00000001"
-# dribbble_username: jekyll
-# facebook_username: jekyll
-# flickr_username: jekyll
-# instagram_username: jameswgrant
-linkedin_username: reedus
-# xing_username: jekyll
-# pinterest_username: jekyll
-# youtube_username: globalmtb
-# googleplus_username: +jekyll
-# orcid_username: 0000-0000-0000-0000
 
 # Additional icon links
-additional_links:
-- title: Location
-  icon: fas fa-map-marker
-  url: https://goo.gl/maps/7hL1KTYAgQnMWHeX8
-# - title: another link
-#   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&m=free)
-#   url: Link url (eg. https://google.com)
-
-# Google Analytics and Tag Manager
-# Using more than one of these may cause issues with reporting
-# gtm: "GTM-0000000"
-# gtag: "UA-00000000-0"
-# google_analytics: "UA-00000000-0"
 
 # About Section
 # about_title: About Me
